Further css fixes, changed font, removed font fixes and auto-aligning logo for accounts view

--- a/packages/dapp/src/components/atoms/Tooltip/Tooltip.scss
+++ b/packages/dapp/src/components/atoms/Tooltip/Tooltip.scss
@@ -15,7 +15,6 @@
 }
 
 .tooltip-text {
-  line-height: $line-height;
   border-radius: $border-radius;
   background: $secondary-bg-color;
   padding: $dist-s;
