--- a/packages/dapp/src/components/organisms/VaultList/VaultList.scss
+++ b/packages/dapp/src/components/organisms/VaultList/VaultList.scss
@@ -1,7 +1,7 @@
 @import "../../_settings/variables.scss";
 
 .vault-list {
-  max-width: 4 * $dist-6xl;
+  max-width: 5 * $dist-6xl;
 
   .list-item:last-of-type {
     border-radius: $border-radius;
