--- a/packages/dapp/src/components/organisms/VaultSelect/VaultSelect.scss
+++ b/packages/dapp/src/components/organisms/VaultSelect/VaultSelect.scss
@@ -2,7 +2,7 @@
 
 .vault-select {
   margin-top: $dist-3xl;
-  max-width: 4 * $dist-6xl;
+  max-width: 5 * $dist-6xl;
   .active {
     border: solid 2px $azure-radiance;
     padding: ($dist-s - 2px);
